--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,7 +18,9 @@ nav{
     background-color: #ce680e;
     padding-top: 40px;
 }
-
+.sub-menu{
+    display: none;
+}
 
 }
 
@@ -227,11 +229,11 @@ nav ul{
     display: block;
 }
 
-#sub-menu{
+.sub-menu{
     display: none;
 }
 
-#sub-menu a{
+.sub-menu a{
     text-transform: uppercase;
     padding: 14px 16px;
     text-decoration: none;
